# tinybvh

./: .gitmodules  Cargo.toml  build.rs  rust-toolchain.toml
ffi/: wrapper.cpp  wrapper.hpp
src/: ffi.rs  lib.rs  vec_helpers.rs
tests/: tests.rs
