[package]
name = "tinybvh"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2", default-features = false, features = ["std"] }

[features]
default = ["simd"]
simd = []
unsafe-send-sync = []

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0"

[dev-dependencies]
approx = "0.5.1"