[package]
name = "tinybvh"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2", default-features = false, features = ["std"] }

[features]
default = ["simd"]
simd = []
unsafe-send-sync = []

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
approx = "0.5.1"